# vtc2

./: .clang-format  CMakeLists.txt  LICENCE.md  README.md
doc/: .gitignore  Virtualization of Traffic Control Cabinet.tex
doc/raw/: biu-signal-assignments.tgn  biu-template.tgn  cmd-frames-freq.tgn  cmd-frames.tgn  dimming-bits.tgn  dr-biu-signal-assignment.tgn  response-frames.tgn  tf-biu-signal-assignment.tgn  ts2-address.tgn  type-0-frame.tgn  type-1-frame.tgn  type-10-frame.tgn  type-11-frame.tgn  type-12-frame.tgn  type-129-frame.tgn  type-13-frame.tgn  type-131-frame.tgn  type-138-141-frame-template.tgn  type-138-frame.tgn  type-139-frame.tgn  type-140-frame.tgn  type-141-frame.tgn  type-148-frame-call-bit-definition.tgn  type-148-frame-part-1.tgn  type-148-frame-part-2.tgn  type-152-frame.tgn  type-158-frame.tgn  type-168-frame.tgn  type-169-frame.tgn  type-170-frame.tgn  type-171-frame.tgn  type-18-frame.tgn  type-20-frame.tgn  type-24-frame.tgn  type-30-frame.tgn  type-42-frame.tgn  type-43-frame.tgn  type-9-frame.tgn
tests/: CMakeLists.txt  cabinet_test.cpp  cmu_test.cpp  cu_test.cpp  delegate_test.cpp  io_test.cpp  log_test.cpp  main.cpp  mmu_test.cpp  tests.cpp  utils_test.cpp  vtc_test.cpp
vtc/: delegate.hpp  hils.config.xml  io.hpp  log.hpp  mmu.hpp  traits.hpp  utils.hpp  vtc.hpp
vtc/cabinet/: cabinet.hpp
vtc/cmu/: cmu.hpp
vtc/cu/: cu.hpp
vtc/io/: io_basic_types.hpp  io_biu.hpp  io_func.hpp  io_siu.hpp
